--- a/01_preparing/01_preparing_trade_data.ipynb
+++ b/01_preparing/01_preparing_trade_data.ipynb
@@ -32,7 +32,7 @@
     "7. *For reproducible cultural goods*: Making three different dyad level time series datasets for books, tapes and cinemas where time ranges is 2000 to 2023 (doing the same as I did for unique cultural products). Cleaning each dataset goes through the steps mentioned in point 5. \n",
     "8. Aggregating the three different reproducible cultural goods data on country pair and time, while tracking the HS codes and number of products traded among each pair in a particular year in the column 'PRODUCT_HS' and 'product_count'\n",
     "9. The notebook also counts and appends hysteresis column to all the datasets.\n",
-    "10. So this notebook will save six different csv files in the 'cleaned' subfolder of the folder 'data', four for four different HS code level data and one for aggregated reproducible data. "
+    "10. So this notebook will save six different csv files in the 'cleaned' subfolder of the folder 'data', four for four different HS code level data and two for aggregated reproducible cultural goods and non-cultural goods data. "
    ]
   },
   {
