--- a/01_preparing/02_preparing_fixed_data.ipynb
+++ b/01_preparing/02_preparing_fixed_data.ipynb
@@ -17,16 +17,14 @@
    "metadata": {},
    "source": [
     "**Steps to prepare the fixed dataset:**\n",
-    "> 1. Reading the 'dist_cepii.csv' file contaning the dyad level fixed variables like contiguity, distance, common language, colonial relationship etc. and keeping only the necessay columns for this study\n",
-    "> 2. Reading the 'geo_cepii.csv' file contaning the node level fixed variables like continent, colonizer, longitude, latitue etc. and keeping only the necessay columns for this study\n",
-    "> 3. Removing self loops if there is any\n",
-    "> 4. Removing duplicates if there is any\n",
-    "> 5. Checking for mismatched countries in the node and dyad level data and removing that if there is any\n",
-    "> 6. For developing and developed category, finding out the mismatch in the 'country' column of IMF data and node level fixed factors data\n",
-    "> 7. There are differences in the country names as IMF website has the latest official names, while the CEPII website uses the older names---the variables are static. Here i am changing the CEPII names while keeping the IMF names as benchmark, as I will merge this two datasets on country name.\n",
-    "> 8. Merging the IMF data on 'country' column with the node level fixed factor data\n",
-    "> 9. Saving both cleaned data frames as separate csv files.\n",
-    "> 10. Merging the two dataset on 'iso_o' which is the ISO Alpha3 value for the exporter country"
+    "> 1. Reading the 'dist_cepii.csv' and 'geo_cepii.csv' files contaning the dyad level fixed variables and node level fixed variables respectively \n",
+    "> 2. Removing self loops, and duplicates if there is any\n",
+    "> 3. Checking for mismatched countries in the node and dyad level data and removing that if there is any\n",
+    "> 4. For developing and developed category, finding out the mismatch in the 'country' column of IMF data and node level fixed factors data\n",
+    "> 5. There are differences in the country names as IMF website has the latest official names, while the CEPII website uses the older names---the variables are static. Here, I edited the CEPII names while keeping the IMF names as benchmark, as I merged this two datasets on country names.\n",
+    "> 6. Merging the IMF data on 'country' column with the node level fixed factor data\n",
+    "> 7. Saving both cleaned data frames as separate csv files.\n",
+    "> 8. Merging the two dataset on 'iso_o' which is the ISO Alpha3 value for the exporter country"
    ]
   },
   {
