--- a/01_preparing/01_preparing_trade_data.ipynb
+++ b/01_preparing/01_preparing_trade_data.ipynb
@@ -23,11 +23,10 @@
     "4. *For unique cultural goods*: Concatenating the five different dataframes based on year splits of HS code 97 to make a dyad level time series data where time ranges from 2000 to 2023.\n",
     "5. Cleaning this data takes the following steps:\n",
     "   > - a. Renaming the exporter and importer columns\n",
-    "   > - b. Removing self loops\n",
-    "   > - c. Removing duplicate rows and keeping the first instance only\n",
-    "   > - d. Sorting values by country pair and time period\n",
-    "   > - e. Reseting index\n",
-    "   > - f. Saving the data in the cleanind folder\n",
+    "   > - b. Removing self loops and duplicate rows and keeping the first instance only\n",
+    "   > - c. Sorting values by country pair and time period\n",
+    "   > - d. Reseting index\n",
+    "   > - e. Saving the data in the cleanind folder\n",
     "   \n",
     "7. *For reproducible cultural goods*: Making three different dyad level time series datasets for books, tapes and cinemas where time ranges is 2000 to 2023 (doing the same as I did for unique cultural products). Cleaning each dataset goes through the steps mentioned in point 5. \n",
     "8. Aggregating the three different reproducible cultural goods data on country pair and time, while tracking the HS codes and number of products traded among each pair in a particular year in the column 'PRODUCT_HS' and 'product_count'\n",
